--- a/src/assets/style/blocks/_header.scss
+++ b/src/assets/style/blocks/_header.scss
@@ -3,6 +3,13 @@ header {
   height: 80px;
   padding: 0;
   transition: background-color $transition1;
+  @media screen and (max-width: $mobile) {
+    z-index: 9;
+    position: fixed;
+    left: 0;
+    top: 0;
+    box-shadow: $shadowBottom;
+  }
 
   & > .container {
     display: flex;
@@ -13,6 +20,10 @@ header {
     .row {
       width: 100%;
       padding: 0 5vw;
+
+      @media screen and (max-width: $mobile) {
+        margin: 0 auto;
+      }
     }
   
     a {
@@ -96,6 +107,45 @@ header {
           font-weight: 600;
           background: #F7FAFC;
           border-radius: 8px;
+        }
+      }
+    }
+    @media screen and (max-width: $mobile) {
+      .pagesContainerRow {
+        position: absolute;
+        left: 0;
+        top: 0;
+      }
+      .pagesContainer {
+        z-index: 9;
+        position: fixed;
+        left: 0; 
+        bottom: -1px;
+        width: 100%;
+        height: 80px;
+        padding: 0 5vw;
+        background-color: $darkViolet;
+        justify-content: center;
+        grid-gap: 2px;
+        box-shadow: $shadowTop;
+
+        .headerLink {
+          font-size: 14px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          padding: 9px 10px;
+          &.nuxt-link-exact-active {
+            font-weight: 400;
+          }
+
+          i {
+            display: block;
+            text-align: center;
+            font-size: 20px;
+            padding-bottom: 5px;
+            padding-top: 2px;
+          }
         }
       }
     }
@@ -216,11 +266,16 @@ header {
 }
 
 body.inkline.-light header {
-  background: rgba(24, 24, 32, 0.04);
-  backdrop-filter: blur(25px);
+  background: #f5f5f6;
+  //backdrop-filter: blur(25px);
   
   .linksContainer .mainLink {
     color: $black;
+  }
+  .pagesContainer {
+    @media screen and (max-width: $mobile) {
+      background-color: $white;
+    }
   }
 }
 
