--- a/src/assets/style/_fonts.scss
+++ b/src/assets/style/_fonts.scss
@@ -1,1 +1,2 @@
-@import "../fonts/fontawsome/css/all.min.css";
+//@import "../fonts/fontawsome/css/all.min.css";
+@import "../fonts/remix/remixicon.css";
