--- a/src/assets/style/blocks/_footer.scss
+++ b/src/assets/style/blocks/_footer.scss
@@ -10,8 +10,8 @@ footer {
   }
 
   &.mainFooter {
-    margin-top: auto;
-
+    width: 100%;
+    
     .row {
       font-size: 14px !important;
     }
