--- a/src/assets/style/blocks/_indexHeader.scss
+++ b/src/assets/style/blocks/_indexHeader.scss
@@ -1,21 +1,22 @@
+@import "../variables";
+
 body {
   .indexHeader {
-    z-index: 5;
-    display: flex;
-    flex-direction: row;
+    backdrop-filter: blur(83.3333px);
+    background: rgba(24, 24, 32, 0.01);
+    height: 84px;
     width: 100%;
-    height: 80px;
-    padding: 0;
+    z-index: 9;
+    background: -moz-linear-gradient(top, rgba(24, 24, 32, 0.9), rgba(24, 24, 32, 0.7));
     box-shadow: 1px 1px 5px 10px rgba(0, 0, 0, 0.01);
 
     .linksContainer {
       .linkItem {
-        color: #243955;
-        font-weight: normal;
         line-height: 2rem;
+        font-weight: normal;
+        transition: color $transition1;
         text-decoration: none;
         cursor: pointer;
-        transition: color $transition1;
 
         &:hover {
           color: $lightViolet !important;
@@ -38,28 +39,30 @@ body {
 
 
     .headerWrapper {
+      padding-top: 0 !important;
+
       .projectLogo {
-        width: auto;
         min-width: 90px;
         max-width: none;
         height: 30px;
+        width: auto;
       }
     }
 
-    .dropdown.-dark {
+    .dropdown {
       padding: 0;
 
       @media screen and (min-width: $mobile+1) and (max-width: 991px) {
-        padding: 0 5px;
         font-size: 14px;
+        padding: 0 5px;
       }
 
       & > .menu[data-popper-placement="bottom"] {
-        min-width: 150px;
         padding: 0;
-        background: $darkViolet;
-        border-color: $darkViolet;
         border-radius: $borderRadius;
+        min-width: 150px;
+        border-color: $darkViolet;
+        background: $darkViolet;
 
         .arrow {
           border-bottom-color: $darkViolet;
@@ -72,15 +75,16 @@ body {
 
         .item {
           color: $white;
-          font-weight: normal;
           font-size: 16px;
           font-family: $openSans;
           font-style: normal;
+          font-weight: normal;
           line-height: 2rem;
 
           &:hover {
-            color: $lightViolet;
+            transition: color, background-color $transition1 !important;
             background-color: lighten($darkViolet, 10) !important;
+            color: $lightViolet;
             will-change: color, backgroud;
           }
 
@@ -106,11 +110,11 @@ body {
           }
 
           & > .menu {
+            margin: 120px;
+            width: 100vw;
             position: fixed;
             left: -35px;
             z-index: 1004;
-            width: 100vw;
-            margin: 120px;
 
           }
         }
@@ -118,16 +122,16 @@ body {
     }
 
     .dropDownHandler {
-      display: inline-flex;
+      cursor: pointer;
+      padding: 10px;
+      display: flex;
       flex-wrap: nowrap;
       align-items: center;
-      padding: 10px;
-      cursor: pointer;
 
       &:before {
+        content: '';
         top: 0;
         left: 0;
-        content: '';
 
       }
 
@@ -136,14 +140,16 @@ body {
         font-size: 15px;
       }
 
+      transition: color $transition1;
+
       &:hover {
         color: $lightViolet;
       }
     }
 
     .mainIndexHeader {
-      width: 100%;
       height: 100%;
+      width: 100%;
     }
 
     @media screen and (max-width: $mobile) {
@@ -169,18 +175,19 @@ body {
         }
 
         .mainIndexHeader {
-          height: auto;
-          min-height: 220px;
           transform: translateY(80px);
+          min-height: 220px;
+          height: auto;
         }
       }
 
       .mobileIndexHeader {
-        z-index: 5;
+        z-index: 9;
         width: 100%;
         height: 100%;
         padding: 0;
-        background-color: $black;
+        background-color: $darkViolet;
+        transition: $transition1;
 
         .column:last-child {
           display: flex;
@@ -198,11 +205,13 @@ body {
             width: 50px;
             height: auto;
             cursor: pointer;
-            user-select: none;
             -webkit-tap-highlight-color: transparent;
+            transition: transform 400ms;
+            user-select: none;
 
             .line {
               fill: none;
+              transition: 400ms ease;
               stroke: $white;
               stroke-width: 5.5;
               stroke-linecap: round;
@@ -219,19 +228,22 @@ body {
         }
       }
       .mainIndexHeader {
-        top: 0;
+        z-index: 2;
+        position: absolute;
         left: 0;
-        z-index: -1;
-        height: auto;
-        min-height: 220px;
+        top: 0;
         padding: 10px 12px 10px;
-        background-color: $black;
-        transform: translateY(-100vh);
+        background-color: $darkViolet;
+        transition: transform $transition2;
         will-change: transform;
+        transform: translateY(-100vh);
+        min-height: 220px;
+        height: auto;
+        transition: $transition1;
 
         .column {
-          padding-right: 0 !important;
           padding-left: 0 !important;
+          padding-right: 0 !important;
 
           &:last-child {
             flex-direction: column !important;
@@ -241,26 +253,28 @@ body {
         }
 
         .socialIcons {
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
           width: 100%;
           margin: 27px 0;
+          display: flex;
+          justify-content: space-between;
           text-align: center;
+          align-items: center;
         }
 
         .linksContainer {
-          position: static;
-          flex-direction: column;
-          align-items: initial;
-          justify-content: flex-start;
           width: 100%;
-          text-align: left;
+          position: static;
           transform: none;
+          flex-direction: column;
+          text-align: left;
+          justify-content: flex-start;
+          align-items: initial;
+          padding-bottom: 20px;
+          grid-gap: 5px;
 
           a {
-            padding: 15px 0;
             font-size: 18px;
+            padding: 10px 0;
             text-align: left;
             &:first-child
             {
@@ -272,12 +286,12 @@ body {
             }
           }
 
-          .dropdown.-dark {
+          .dropdown {
             width: 100%;
 
             & > .dropDownHandler {
-              padding: 15px 0;
               font-size: 18px;
+              padding: 10px 0;
               text-align: left;
             }
 
@@ -290,11 +304,19 @@ body {
               }
 
               & > a.item {
-                padding: 15px;
                 font-size: 18px;
+                padding: 9px 15px;
               }
             }
           }
+        }
+      }
+      .dropdown {
+        transition: height $transition1;
+        height: 52px;
+        overflow: hidden;
+        &.opened {
+          height: 312px;
         }
       }
     }
@@ -304,28 +326,50 @@ body {
 .mainIndexHeader, .mainFooter {
   .linksContainer {
     position: absolute;
-    top: 50%;
     left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     align-items: center;
     justify-content: center;
-    transform: translate(-50%, -50%);
 
     a.linkItem {
       padding: 0 10px;
       white-space: nowrap;
+      color: $white !important;
       @media screen and (min-width: $mobile+1) and (max-width: 991px) {
-        padding: 0 5px;
         font-size: 14px;
+        padding: 0 5px;
       }
     }
   }
 }
 
-body.inkline {
-  &.-dark .mainIndexHeader {
-    .linksContainer a.linkItem {
-      color: $white;
+body.inkline.-light {
+  .indexHeader {
+    .mobileIndexHeader {
+      background-color: $white;
+
+      .hamContainer #ham .line {
+        stroke: $black;
+      }
+    }
+    .mainIndexHeader {
+      background-color: $white;
+
+      .linksContainer {
+        a.linkItem {
+          color: $black !important;
+        }
+      }
+      .dropdown .menu {
+        border-color: $white;
+        background-color: $white;
+
+        .item {
+          color: $black;
+        }
+      }
     }
   }
 }
