--- a/src/assets/style/pages/_index.scss
+++ b/src/assets/style/pages/_index.scss
@@ -13,6 +13,7 @@
     h1 {
       font-weight: 800;
       font-size: 24px;
+      text-align: center;
     }
     .noteContainer {
       max-width: 480px;
