--- a/src/assets/style/layouts/_index.scss
+++ b/src/assets/style/layouts/_index.scss
@@ -26,8 +26,7 @@
       position: relative;
       width: 130px;
       height: 130px;
-      margin: 20px auto;
-      margin-bottom: 5px;
+      margin: 20px auto 5px;
       padding: 20px;
       background-color: $white;
       border-radius: 27px;
