--- a/src/assets/style/blocks/_header.scss
+++ b/src/assets/style/blocks/_header.scss
@@ -1,3 +1,5 @@
+@import "../variables";
+
 header {
   width: 100%;
   height: 80px;
@@ -168,8 +170,7 @@ header {
         justify-content: space-between;
         width: max-content;
         height: 100%;
-        padding: 4px 0;
-        padding-right: 13px;
+        padding: 4px 13px 4px 0;
 
         .walletLabel {
           color: #BABABA;
