--- a/src/assets/style/blocks/_header.scss
+++ b/src/assets/style/blocks/_header.scss
@@ -13,6 +13,33 @@ header {
       top: 0;
       box-shadow: $shadowBottom;
     }
+    @media screen and (min-width: 992px) and (max-width: 1200px) {
+      .pagesContainer.linksContainer {
+        grid-gap: 3px;
+
+        .headerLink {
+          padding: 10px 10px;
+          font-size: 14px;
+        }
+      }
+    }
+    @media screen and (min-width: 768px) and (max-width: 991px) {
+      .pagesContainer.linksContainer {
+        grid-gap: 3px;
+
+        .headerLink {
+          padding: 10px 15px;
+          font-size: 20px;
+
+          span {
+            display: none;
+          }
+          i {
+            display: block !important;
+          }
+        }
+      }
+    }
   }
 
   & > .container {
@@ -33,13 +60,26 @@ header {
     a {
       text-decoration: none;
     }
-  
+    
+    .logoLinkContainer {
+      height: 100%;
+      display: flex;
+      align-items: center;
+    }
     .headerWrapper {
-      height: 35px !important;
+      height: 30px !important;
+      @media screen and (min-width: 768px) and (max-width: 991px) {
+        height: 25px !important;
+
+        .badge small {
+          font-size: 10px !important;
+        }
+      }
   
-      .projectLogo {
+      .zkwallet-logo {
         width: auto !important;
         height: 100% !important;
+        object-fit: contain;
       }
   
       .badge {
@@ -59,9 +99,6 @@ header {
         .projectLogo {
           max-width: 130px !important;
           object-fit: contain !important;
-        }
-        .badge {
-          margin-top: 0 !important;
         }
       }
     }
@@ -105,12 +142,12 @@ header {
         transition: $transition1;
         transition-property: background-color, color;
         will-change: background-color, color;
+        border-radius: 8px;
         
         &.nuxt-link-exact-active {
           color: #27274E;
           font-weight: 600;
           background: #F7FAFC;
-          border-radius: 8px;
         }
       }
     }
@@ -127,7 +164,7 @@ header {
         bottom: -1px;
         width: 100%;
         height: 80px;
-        padding: 0 5vw;
+        padding: 6px 5vw;
         background-color: $darkViolet;
         justify-content: center;
         grid-gap: 2px;
@@ -135,6 +172,7 @@ header {
 
         .headerLink {
           font-size: 14px;
+          height: 100%;
           display: flex;
           flex-direction: column;
           justify-content: center;
