--- a/src/assets/style/pages/_account.scss
+++ b/src/assets/style/pages/_account.scss
@@ -118,10 +118,9 @@
                 color: $gray;
               }
 
-              .loaderSpinner {
-                position: relative;
-                top: 3px;
-                left: 2px;
+              .loaderContainer {
+                margin-left: 2px;
+                margin-top: 1px;
               }
             }
           }
