refactor(Src): Type-errors fixing
Fixing left type-errors

--- a/src/assets/style/pages/_tokenAccount.scss
+++ b/src/assets/style/pages/_tokenAccount.scss
@@ -22,3 +22,13 @@
     }
   }
 }
+
+.balanceWithdraw {
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+
+    & > .infoBlock {
+      margin-bottom: 10px;
+    }
+  }
+}
