Fix active deposits list update

--- a/src/assets/style/layouts/_default.scss
+++ b/src/assets/style/layouts/_default.scss
@@ -180,6 +180,7 @@ input.form-input.-prefixed {
     border-radius: 50%;
     font-size: 11px;
     line-height: 26px;
+    text-align: center;
     background: transparentize($color: $gray, $amount: 0.7);
     opacity: .9;
     margin-left: 10px;
