--- a/src/assets/style/components/_amountInput.scss
+++ b/src/assets/style/components/_amountInput.scss
@@ -3,7 +3,7 @@
 .amountInput {
   transition: box-shadow $transition1;
   will-change: box-shadow;
-  &.allowence {
+  &.allowance {
     .minAmount {
       min-height: 24px;
     }
