--- a/src/assets/style/pages/_account.scss
+++ b/src/assets/style/pages/_account.scss
@@ -31,7 +31,7 @@
         overflow-x: hidden !important;
         overflow-y: auto !important;
         background-color: #ffffff10;
-        border-radius: $borderInsetRadius;
+        border-radius: $borderRadius;
         box-shadow: $shadowInset;
 
         &::-webkit-scrollbar {
