--- a/src/assets/style/pages/_contacts.scss
+++ b/src/assets/style/pages/_contacts.scss
@@ -28,7 +28,7 @@
   height: 100%;
   margin-top: 1rem;
   overflow: auto;
-  border-radius: $borderInsetRadius;
+  border-radius: $borderRadius;
   box-shadow: $shadowInset;
 
   &::-webkit-scrollbar {
