--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -6,6 +6,7 @@ $black: #242424;
 $violet: #4e529a;
 $green: #1d9b4a;
 $darkViolet: #171a49; //MajorDark
+$mediumViolet: #2f3264;
 $lightViolet: #8c8dfc;
 $red: #f25f5c;
 $link-color: $lightViolet;
@@ -17,6 +18,13 @@ $tempLightGray: #bababa;
 $tempLightYellow: #bababa;
 $tempDarkBlue: #11142b;
 $tempTransparent: transparent;
+
+/* Bg */
+$accentBg: transparentize(
+  $color: $gray,
+  $amount: 0.95,
+);
+$bgLight: #fbfbfb;
 
 /* Input */
 $input-prefix-border-width: 0;
@@ -69,6 +77,7 @@ $popoverShadow: 0 10px 40px rgba(0, 0, 0, 0.05);
 $shadowTop: 0 -3px 10px rgba(0, 0, 0, 0.05);
 $shadowBottom: 0 3px 10px rgba(0, 0, 0, 0.05);
 $inputContainerShadow: 0 2px 4px rgba(0, 0, 0, 0.04), 0 4px 6px rgba(0, 0, 0, 0.04);
-
-/* Borders */
-$borderInsetRadius: 8px;
+$hoverShadow: 0 4px 8px #00000015;
+$defaultShadow: 0 4px 4px #00000015;
+$layerShadow: 0 1px 5px 0 #0000001a;
+$tileShadow: 0 1px 0.5px #0000001a;
