--- a/src/assets/style/blocks/_onboard.scss
+++ b/src/assets/style/blocks/_onboard.scss
@@ -17,9 +17,9 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      padding-top: 5vh;
       height: 100vh !important;
       max-height: 100vh !important;
+      padding-top: 5vh;
       border-radius: 0 !important;
       .bn-onboard-modal-content-header {
         margin: 1rem 0 !important;
@@ -38,7 +38,7 @@
     }
 
     .bn-onboard-selected-wallet {
-      background-color: transparentize($color: $gray, $amount: 0.95) !important;
+      background-color: $accentBg !important;
     }
   }
 
@@ -52,7 +52,12 @@
     padding-bottom: 0.5rem !important;
     overflow-y: scroll;
     background-color: transparentize($color: $color-secondary, $amount: 0.95);
-    border-radius: 8px;
+    border-radius: $borderRadius;
+
+    button.bn-onboard-icon-button {
+      margin: 0.1rem 0;
+      border-radius: 4px;
+    }
   }
 
   .bn-onboard-custom.bn-onboard-select-wallet-definition {
@@ -64,7 +69,7 @@
       font-weight: bold;
 
       a {
-        color: #8c8dfc !important;
+        color: $lightViolet !important;
       }
     }
   }
@@ -77,25 +82,23 @@
   .bn-onboard-selected-wallet {
     background-color: transparentize($color: $gray, $amount: 0.7) !important;
 
-    span {
-      i {
-        font-style: normal;
-        text-transform: capitalize;
-        text-decoration: none;
-      }
+    span i {
+      font-style: normal;
+      text-transform: capitalize;
+      text-decoration: none;
     }
   }
 
   .bn-onboard-prepare-button {
     color: $white !important;
-    background-color: $violet;
+    background-color: $violet !important;
     border-color: $violet !important;
     border-radius: 4px;
     transition: $transition1;
 
     &:hover {
       background-color: $lightViolet !important;
-      border-color: $lightViolet;
+      border-color: $lightViolet !important;
     }
   }
 
@@ -158,6 +161,7 @@
     visibility: hidden !important;
   }
 }
+
 .bn-onboard-modal {
   @media screen and (max-width: $mobile) {
     button.bn-onboard-modal.bn-onboard-modal-content {
@@ -166,16 +170,20 @@
     }
     .bn-onboard-modal-content {
       padding-bottom: 0;
+
       header.bn-onboard-custom.bn-onboard-modal-content-header {
         margin: 1rem 0 !important;
+
         h3 {
           margin: 0 !important;
         }
       }
+
       .bn-onboard-custom.bn-onboard-select-description {
         margin: 0 0 0.5rem;
         padding: 0 0 0.5rem;
       }
+
       ul.bn-onboard-custom.bn-onboard-modal-select-wallets {
         position: relative;
         height: 100%;
@@ -187,11 +195,13 @@
           max-height: 44vh !important;
         }
       }
+
       .bn-onboard-custom.bn-onboard-select-info-container {
         margin: 1rem 0 0.5rem;
         padding: 0.75rem 0 0.5rem;
         border-top: 0.5px solid $lightViolet;
       }
+
       .bn-onboard-modal-content-close {
         top: 2rem;
       }
@@ -204,6 +214,7 @@ body {
     .walletconnect-modal__footer a {
       color: $darkViolet !important;
     }
+
     .bn-onboard-custom {
       .bn-onboard-modal-content-close {
         @media (max-width: $mobile) {
