style(Generic UI / Look & Fee): Dozens of tiny yet important fixes
— consistent footer & header
— update for the onboarding popup window
—
icons, logos, links, behaiviour and transitions

--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -44,13 +44,14 @@ input[type="number"] {
 }
 
 .linkText {
-  color: $lightViolet;
+  color: $violet;
   font-weight: 500;
   font-size: 16px;
   cursor: pointer;
 
   &:hover {
-    text-decoration: underline;
+    color: $lightViolet;
+    text-decoration: none !important;
   }
 }
 
