--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -13,6 +13,10 @@ $link-color: $lightViolet;
 $color-secondary: $violet;
 $openSans: "Open Sans", "sans-serif";
 
+/* Uplifting */
+$bgDesign: #f4f5f7;
+$darkMain: #272640;
+
 /* Extracted values */
 $tempLightGray: #bababa;
 $tempLightYellow: #bababa;
