--- a/src/assets/style/blocks/_footer.scss
+++ b/src/assets/style/blocks/_footer.scss
@@ -28,6 +28,10 @@ footer {
     @media (max-width: $mobile) {
       font-size: 14px;
     }
+
+    &:hover {
+      text-decoration: none !important;
+    }
   }
 
   .zkSyncBootomLogo {
@@ -38,6 +42,7 @@ footer {
     width: 100%;
     height: auto;
   }
+
   .poweredBy {
     display: flex;
     align-items: center;
@@ -80,6 +85,11 @@ footer {
   footer {
     a {
       font-size: 14px;
+      color: $violet !important;
+
+      &:hover {
+        color: $lightViolet !important;
+      }
     }
   }
 }
@@ -111,7 +121,7 @@ footer {
 
 .inkline.-dark {
   footer > .container .badge {
-    color: $mediumViolet;
+    color: $darkerGray;
     background: #e9ecef;
   }
 }
