Fixes, design updates, etc.

--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -92,6 +92,10 @@ body.inkline {
   &.-dark {
     background-color: $tempDarkBlue;
 
+    .linkText {
+      color: $lightViolet;
+    }
+    
     .projectLogo {
       .logoLetter {
         fill: $mediumGrey;
