--- a/src/assets/style/blocks/_indexHeader.scss
+++ b/src/assets/style/blocks/_indexHeader.scss
@@ -147,6 +147,25 @@ body {
     @media screen and (max-width: $mobile) {
       .mobileIndexHeader {
         padding: 0;
+
+        .headerWrapper {
+          position: relative;
+          width: max-content;
+          padding-top: 0 !important;
+
+          .zkwallet-logo {
+            height: 35px;
+
+            @media screen and (max-width: 365px) {
+              height: 28px;
+            }
+          }
+          .badge {
+            position: absolute;
+            left: 100%;
+            bottom: 100%;
+          }
+        }
       }
       &.opened {
         .mobileIndexHeader {
@@ -174,9 +193,10 @@ body {
 
       .mobileIndexHeader {
         z-index: 9;
-        width: 100%;
+        width: 90%;
         height: 100%;
         padding: 0;
+        margin: 0 auto;
         background-color: $darkViolet;
         transition: $transition1;
 
