Footer style fixes

--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -69,7 +69,7 @@ $borderRadiusBig: 16px;
 /* Blocks */
 $headerHeight: 80px;
 $minRouteHeight: calc(100vh - 82px - 80px);
-$minRouteHeightMain: calc(100vh - 82px - 80px - 15px);
+$minRouteHeightMain: calc(100vh - 82px - 80px);
 
 /* Responsive */
 $mobile: 768px;
