--- a/src/assets/style/layouts/_default.scss
+++ b/src/assets/style/layouts/_default.scss
@@ -100,8 +100,9 @@
 
     .tileTextBg {
       margin: 5px 0;
-      padding: 15px;
-      font-size: 16px;
+      padding: 12px 15px;
+      font-size: 15px;
+      text-align: center;
       border: 1px solid;
       border-radius: 5px;
     }
