Small style fix

--- a/src/assets/style/pages/_account.scss
+++ b/src/assets/style/pages/_account.scss
@@ -2,8 +2,9 @@
 
 .walletPage {
   .balancesBlock {
-    height: $minRouteHeightMain;
-    min-height: 360px;
+    height: max-content;
+    max-height: $minRouteHeightMain;
+    min-height: 320px;
 
     .form-input-group {
       margin-bottom: 1rem;
