Balances style fix

--- a/src/assets/style/pages/_account.scss
+++ b/src/assets/style/pages/_account.scss
@@ -3,7 +3,7 @@
 .walletPage {
   .balancesBlock {
     height: max-content;
-    max-height: $minRouteHeightMain;
+    //max-height: $minRouteHeightMain;
     min-height: 320px;
 
     .form-input-group {
