build(Workflow): Tooling — refactored
* new ESling configuration
* redundant eventBus dropped
* new StyleLint configuration
* yarn-2 release updated
* types at index.d.ts updated
* cypress dropped so far to avoid interference
* yarn / packahge.json updated
* TS-config linked w/t eslint and updated
* dependencies tree rebuild
* SCSS updated to lazy-loading of vars/*.scss

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,8 +1,9 @@
 // Core
-@import "./variables";
+
+@import "./components/custom/input.scss";
+@import "./components/custom/button.scss";
+@import "./components/custom/alert.scss";
 @import "./default";
-@import "./transitions";
-@import "./fonts";
 
 //Layouts
 @import "./layouts/default";
@@ -14,7 +15,6 @@
 @import "./blocks/footer";
 @import "./blocks/socialBlock";
 @import "./blocks/logo";
-@import "./blocks/investors";
 @import "./blocks/onboard";
 @import "./blocks/mint";
 @import "./blocks/loggingInLoader";
