--- a/src/assets/style/pages/_transactions.scss
+++ b/src/assets/style/pages/_transactions.scss
@@ -84,12 +84,17 @@
         }
       }
 
+      .tooltip-wrapper {
+        display: block;
+        .tooltip {
+          max-width: 200px;
+          height: auto;
+          white-space: initial;
+          width: max-content;
+        }
+      }
       .mainInfo {
         text-align: left;
-
-        .tooltip-wrapper {
-          display: block;
-        }
 
         .createdAt {
           color: $gray;
@@ -122,6 +127,7 @@
           color: $gray;
           font-size: 16px;
           line-height: 19px;
+
           @media screen and (max-width: $mobile) {
             justify-content: center;
           }
