style(UI): Token Balance page fix for the height

--- a/src/assets/style/pages/_tokenAccount.scss
+++ b/src/assets/style/pages/_tokenAccount.scss
@@ -13,7 +13,9 @@
       }
     }
   }
-
+  .tileBlock.transactionsTile {
+    height: calc(100vh - 82px - 80px - 300px) !important;
+  }
   .transactionsTile {
     height: $minRouteHeightMain !important;
     min-height: 250px !important;
