--- a/src/assets/style/pages/_transaction.scss
+++ b/src/assets/style/pages/_transaction.scss
@@ -7,6 +7,13 @@
     color: $red;
   }
 
+  .totalPrice {
+    text-align: center;
+    margin: 1rem auto 0;
+    font-size: 16px;
+    color: $gray;
+  }
+
   @media screen and (max-width: $mobile) {
     .feeAmount {
       display: block;
@@ -17,6 +24,7 @@
     height: 100%;
     max-height: 60vh;
     overflow: auto;
+
     @media (max-width: $mobile) {
       max-height: 55vh;
     }
